# Drug-Drug-Interaction-Prediction

./: .gitignore  0457.py  DISCLAIMER.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
demo/: app.py
notebooks/: example_usage.py
scripts/: evaluate.py  train.py
src/losses/: __init__.py
src/metrics/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py
tests/: test_ddi_prediction.py
